--- a/shopapp.webui/Views/_ViewImports.cshtml
+++ b/shopapp.webui/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using shopapp.webui.Models
 @using shopapp.entity
 @using Newtonsoft.Json
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers 
