--- a/shopapp.webui/Views/_ViewImports.cshtml
+++ b/shopapp.webui/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using shopapp.entity
 @using Newtonsoft.Json
 @using Microsoft.AspNetCore.Identity;
+@using shopapp.webui.Identity;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers 
