--- a/shopapp.webui/Views/Admin/UserList.cshtml
+++ b/shopapp.webui/Views/Admin/UserList.cshtml
@@ -47,8 +47,8 @@
                         <td>@item.Email</td>
                         <td>@item.EmailConfirmed</td>
                         <td>
-                            <a asp-controller="Admin" asp-action="User" asp-route-id="@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
-                            <a asp-controller="Admin" asp-action="User" asp-route-id="@item.Id" class="btn btn-danger btn-sm mr-2">Delete</a>
+                            <a asp-controller="Admin" asp-action="UserEdit" asp-route-id="@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
+                            <a asp-controller="Admin" asp-action="UserDelete" asp-route-id="@item.Id" class="btn btn-danger btn-sm mr-2">Delete</a>
                         </td>
                     </tr>
                 }
